# OOP-5

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
doc/: Лр 5 Кожуховский.docx
src/: example_1.py  main.py
tests/: test_main.py
