[tool.poetry]
name = "oop-5"
version = "0.1.0"
description = ""
authors = ["ViktorKozh <viktor.ru253@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
ruff = "^0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
